website/versioned_docs/version-12.0/system-settings/external-displays.md
---
id: version-12.0-external-displays
title: External Displays
sidebar_label: External Displays
original_id: external-displays
---

For extra workspace you can connect another display to the DVI port(s)
on the console *(VGA on Pearl Expert and Tiger Touch mk1)*. The Sapphire
Touch can have two external displays, all other consoles can have one.
You can use touch screens, we advise using Windows Touch compatible
monitors to avoid driver issues.

Obviously for Titan Mobile and Titan Go you can connect whichever
external displays your computer will support.

An external display is disabled by default and will show a \'disabled\'
message. To enable, switch to System mode and select \[Display Setup\]
then press \[External Display Disconnected\]. The option will change to
\[External Display Connected\] and the display will be enabled.

> For best performance of the console, disable display outputs you aren't
using.

Titan should configure its output to match your monitor. However if this
does not work for some reason you can manually set resolution from the
toolbar. Click \'Tools\' at the very top of the touch screen and select
\'Control Panel\', then \'External Monitor\', then select the option to
match the resolution of your monitor.

![External Monitor Resolution](/docs/images/External-Monitor-Resolution.png)


