website/versioned_docs/version-15.0/system-settings/external-displays.md
---
id: external-displays
title: External Displays
sidebar_label: External Displays
---

import Keys from '@site/src/components/key.ts';
import Video from '@site/src/components/video.tsx';

For extra workspace you can connect external monitors to the monitor ports
provided on the console (HDMI on Diamond 9, DVI on other consoles, except Pearl Expert and Tiger Touch 1
which are VGA). The Diamond 9 and Sapphire
Touch can have two external displays, all other consoles can have one.
You can use touch screens, we advise using Windows Touch compatible
monitors to avoid driver issues.

For Titan PC Suite (Titan Mobile, Titan Go, Titan Simulator) you can connect whichever
external displays your computer will support, Titan can use up to three of them.

An external display is disabled by default and will show a \'disabled\'
message. To enable, go to the <strong>System</strong> menu (press <Keys.HardKey>Avo</Keys.HardKey> + <Keys.HardKey>Disk</Keys.HardKey>) and select <Keys.SoftKey>Display Setup</Keys.SoftKey>
then press <Keys.SoftKey>External Display Disconnected</Keys.SoftKey>. The option will change to <Keys.SoftKey>External Display Connected</Keys.SoftKey> and the display will be enabled.

> For best performance of the console, disable display outputs you aren't
using.

Titan should configure its output to match your monitor. However if this
does not work for any reason, on a console you can manually set the resolution from the
toolbar. Click \'Tools\' at the very top of the touch screen and select
\'Control Panel\', then \'External Monitor\', then select the option to
match the resolution of your monitor.

![External Monitor Resolution](/docs/images/External-Monitor-Resolution.png)

